# Optica-Forever-Vision

./: ANALISIS_Y_PLAN.md  CERTIFICADOS F V.docx  Cuentas(Recuperado automáticamente)(Recuperado automáticamente)(Recuperado automáticamente).xlsx  Cuentas.xlsx  INSTALAR-WINDOWS.md  OpticaRevisado.xlsm  migrar.py  migrar_cuentas.py
optica-forever-vision/backend/: .env.example  Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml
optica-forever-vision/backend/alembic/: env.py
optica-forever-vision/backend/alembic/versions/: 0001_initial.py  0002_pacientes_consultas.py  0003_comercial.py  0004_tesoreria.py  0005_agenda.py  0006_paciente_origen_referido.py  0007_creditos.py  0008_orden_lab_telefono.py  0009_config_text_firma.py  0010_proveedores.py  0011_sri_producto_map.py  0012_cxp_items.py  0013_foto_notas_walog_presupuestos.py  0014_armazon_preferido.py  0015_credito_abono_inicial.py  0016_mejoras_v2.py  0017_sueldos_transferencias.py  0018_firma_proveedor_numeradores.py  0019_referido_a_usuario.py  0020_diag_od_oi_consultas.py  0021_ordenes_armazon_proforma.py  0022_consultas_test_colores.py  0023_transferencias_comision.py  0024_ordenes_producto_id.py  0025_orden_precio_armazon_lunas.py  0026_orden_luna_specs.py
optica-forever-vision/backend/app/: main.py
optica-forever-vision/backend/app/core/: config.py  db.py  deps.py  limiter.py  mailer.py  numeradores.py  security.py
optica-forever-vision/backend/app/models/: __init__.py  agenda.py  caja.py  configuracion.py  consulta.py  credito.py  cxp_item.py  nota.py  paciente.py  presupuesto.py  producto.py  (+8 more)
(+122 files in other folders)
