[project]
name = "optica-backend"
version = "0.1.0"
description = "Sistema de gestión Óptica Forever Vision - API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.2",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
